--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,286 +1,299 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 62.5%;
-    scroll-behavior: smooth;
-    font-family: 'Roboto', sans-serif;
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
-    background-color: #262626;
-    background-image: radial-gradient(circle, #292929, #202020, #181818, #0f0f0f, #000000);
-    color: #D9D7D7;
-    min-height: 100vh;
-    text-align: center;
+  background-color: #262626;
+  background-image: radial-gradient(
+    circle,
+    #292929,
+    #202020,
+    #181818,
+    #0f0f0f,
+    #000000
+  );
+  color: #d9d7d7;
+  min-height: 100vh;
+  text-align: center;
 }
 
-h1, h2, h3, h4 {
-    font-weight: normal;
+h1,
+h2,
+h3,
+h4 {
+  font-weight: normal;
 }
-ul, ol {
-    list-style: none;
+ul,
+ol {
+  list-style: none;
 }
 input {
-    text-align: center;
-    border: none;
+  text-align: center;
+  border: none;
 }
-
+.loading-state {
+  padding: 3rem;
+  background-color: #282828;
+  border-radius: .5rem;
+}
 .wrapper {
-    display: grid;
-    row-gap: 3rem;
-    padding-block: 15%;
-    width: 90%;
-    max-width: 70rem;
-    min-height: 100%;
-    margin-inline: auto;
+  display: grid;
+  row-gap: 3rem;
+  padding-block: 15%;
+  width: 90%;
+  max-width: 70rem;
+  min-height: 100%;
+  margin-inline: auto;
 }
 
 .counter {
-    align-self: center;
-    font-size: 2.5rem;
-    line-height: 3.5rem;
-    letter-spacing: .18rem;
+  align-self: center;
+  font-size: 2.5rem;
+  line-height: 3.5rem;
+  letter-spacing: 0.18rem;
 }
 
 .searcher {
-    justify-self: center;
-    align-self: center;
-    border-radius: .5rem;
-    color: #7c7c7c;
-    font-size: 1.8rem;
-    letter-spacing: .1rem;
-    width: 90%;
-    min-width: 15rem;
-    max-width: 70rem;
-    height: 7rem;
+  justify-self: center;
+  align-self: center;
+  border-radius: 0.5rem;
+  color: #7c7c7c;
+  font-size: 1.8rem;
+  letter-spacing: 0.1rem;
+  width: 90%;
+  min-width: 15rem;
+  max-width: 70rem;
+  height: 7rem;
 }
 
 .todo-list {
-    display: flex;
-    flex-flow: row wrap;
-    row-gap: 3rem;
-    justify-content: center;
-    margin-block-end: 7rem;
+  display: flex;
+  flex-flow: row wrap;
+  row-gap: 3rem;
+  justify-content: center;
+  margin-block-end: 7rem;
 }
 .todo-list__item {
-    display: flex;
-    flex-flow: row wrap;
-    row-gap: 2rem;
-    background-color: rgb(236, 236, 236);
-    color: #262626;
-    min-width: 20rem;
-    width: 100%;
-    max-width: 50rem;
-    min-height: 6rem;
-    height: auto;
-    border-radius: .5rem;
-    padding: 1.3rem 3rem;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    transition: 300ms;
+  display: flex;
+  flex-flow: row wrap;
+  row-gap: 2rem;
+  background-color: rgb(236, 236, 236);
+  color: #262626;
+  min-width: 20rem;
+  width: 100%;
+  max-width: 50rem;
+  min-height: 6rem;
+  height: auto;
+  border-radius: 0.5rem;
+  padding: 1.3rem 3rem;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  transition: 300ms;
 }
 .todo-list__item-completed {
-    background-color: rgb(176, 176, 176);
+  background-color: rgb(176, 176, 176);
 }
 .todo-list__icon-container {
-    display: flex;
-    justify-content: space-around;
-    order: 1;
-    width: 100%;
+  display: flex;
+  justify-content: space-around;
+  order: 1;
+  width: 100%;
 }
 .icon {
-    font-size: 2.4rem;
-    cursor: pointer;
-    width: 10%;
+  font-size: 2.4rem;
+  cursor: pointer;
+  width: 10%;
 }
 .icon-check {
-    color: #727272;
+  color: #727272;
 }
 .icon-check--active {
-    color: green;
+  color: green;
 }
 .close {
-    color: #727272;
+  color: #727272;
 }
 .close:active {
-    color: red;
+  color: red;
 }
 .close:hover {
-    color: red;
+  color: red;
 }
 .todo-list__title {
-    order: 2;
-    font-size: 3.2rem;
-    letter-spacing: 0.16rem;
-    min-width: 100%;
-    max-width: 100%;
+  order: 2;
+  font-size: 3.2rem;
+  letter-spacing: 0.16rem;
+  min-width: 100%;
+  max-width: 100%;
 }
 .todo-list__task-name {
-    order: 4;
-    font-size: 2.4rem;
-    line-height: 2.7rem;
-    letter-spacing: .1rem;
-    width: 100%;
-    font-weight: lighter;
-    white-space: initial;
-    overflow: hidden;
+  order: 4;
+  font-size: 2.4rem;
+  line-height: 2.7rem;
+  letter-spacing: 0.1rem;
+  width: 100%;
+  font-weight: lighter;
+  white-space: initial;
+  overflow: hidden;
 }
 .todo-list__date {
-    width: 40%;
-    min-width: 30%;
-    max-width: 40%;
-    order: 5;
-    padding: 1rem;
-    font-size: 1.4rem;
-    font-weight: bold;
-    border: .1rem solid #202020;
+  width: 40%;
+  min-width: 30%;
+  max-width: 40%;
+  order: 5;
+  padding: 1rem;
+  font-size: 1.4rem;
+  font-weight: bold;
+  border: 0.1rem solid #202020;
 }
 .todo-list__task-name--completed {
-    text-decoration: line-through;
+  text-decoration: line-through;
 }
 .FAB {
-    position: fixed;
-    bottom: 2.4rem;
-    right: 2.4rem;
-    border: none;
-    border-radius: 50%;
-    background-color: rgb(255, 247, 0);
-    color: #202020;
-    cursor: pointer;
-    width: 8rem;
-    height: 8rem;
-    box-shadow: 0 .5rem 2.5rem rgba(109, 109, 109, .5);
-    opacity: .8;
-    
-    transform: rotate(0deg);
-    transition: 100ms ease-out;
+  position: fixed;
+  bottom: 2.4rem;
+  right: 2.4rem;
+  border: none;
+  border-radius: 50%;
+  background-color: rgb(255, 247, 0);
+  color: #202020;
+  cursor: pointer;
+  width: 8rem;
+  height: 8rem;
+  box-shadow: 0 0.5rem 2.5rem rgba(109, 109, 109, 0.5);
+  opacity: 0.8;
+
+  transform: rotate(0deg);
+  transition: 100ms ease-out;
 }
 .FAB:active {
-    opacity: 1;
-    
+  opacity: 1;
 }
 .FAB__icon {
-    font-size: 4rem;
+  font-size: 4rem;
 }
 .open-modal {
-    transform: rotate(240deg);
+  transform: rotate(240deg);
 }
 .state-text {
-    font-size: 1.8rem;
-    letter-spacing: .15rem;
+  font-size: 1.8rem;
+  letter-spacing: 0.15rem;
 }
 
 .modal-bg {
-    background-color: rgba(33, 33, 33, .8);
-    position: fixed;
-    top: -1rem;
-    left: -1rem;
-    right: -1rem;
-    bottom: -1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.8rem;
-    font-weight: lighter;
+  background-color: rgba(33, 33, 33, 0.8);
+  position: fixed;
+  top: -1rem;
+  left: -1rem;
+  right: -1rem;
+  bottom: -1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.8rem;
+  font-weight: lighter;
 }
 
 .form {
-    display: flex;
-    flex-flow: column wrap;
-    row-gap: 2rem;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 80%;
-    min-height: 50%;
-    min-width: 30rem;
-    max-width: 70rem;
-    background-color: #181818;
-    padding: 3rem 1rem;
-    border-radius: 1rem;
-    margin-bottom: 15rem;
+  display: flex;
+  flex-flow: column wrap;
+  row-gap: 2rem;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 80%;
+  min-height: 50%;
+  min-width: 30rem;
+  max-width: 70rem;
+  background-color: #181818;
+  padding: 3rem 1rem;
+  border-radius: 1rem;
+  margin-bottom: 15rem;
 }
 .form__label {
-    font-size: 2.8rem;
-    font-weight: lighter;
-    letter-spacing: .2rem;
+  font-size: 2.8rem;
+  font-weight: lighter;
+  letter-spacing: 0.2rem;
 }
 .form__text-container {
-    display: flex;
-    flex-flow: column wrap;
-    row-gap: 2rem;
-    align-items: center;
+  display: flex;
+  flex-flow: column wrap;
+  row-gap: 2rem;
+  align-items: center;
 }
 .form__input {
-    height: 3rem;
-    width: 80%;
-    padding: 1rem 1.5rem;
-    border-radius: .5rem;
-    box-shadow: 0 .5rem 2.5rem rgba(109, 109, 109, .5);
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.8rem;
-    color: #727272;
+  height: 3rem;
+  width: 80%;
+  padding: 1rem 1.5rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 0.5rem 2.5rem rgba(109, 109, 109, 0.5);
+  font-family: "Roboto", sans-serif;
+  font-size: 1.8rem;
+  color: #727272;
 }
 .form__date {
-    height: 3rem;
-    width: 50%;
-    padding: 1rem 1.5rem;
-    border-radius: .5rem;
-    box-shadow: 0 .5rem 2.5rem rgba(109, 109, 109, .5);
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.8rem;
-    color: #727272;
+  height: 3rem;
+  width: 50%;
+  padding: 1rem 1.5rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 0.5rem 2.5rem rgba(109, 109, 109, 0.5);
+  font-family: "Roboto", sans-serif;
+  font-size: 1.8rem;
+  color: #727272;
 }
 .form__text-area {
-    min-width: 25rem;
-    max-width: 25rem;
-    min-height: 10rem;
-    max-height: 10rem;
-    border: none;
-    padding: 1rem 1.5rem;
-    border-radius: .5rem;
-    box-shadow: 0 .5rem 2.5rem rgba(109, 109, 109, .5);
-    font-family: 'Roboto', sans-serif;
-    font-size: 2.2rem;
-    color: #727272;
-    text-align: center;
+  min-width: 25rem;
+  max-width: 25rem;
+  min-height: 10rem;
+  max-height: 10rem;
+  border: none;
+  padding: 1rem 1.5rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 0.5rem 2.5rem rgba(109, 109, 109, 0.5);
+  font-family: "Roboto", sans-serif;
+  font-size: 2.2rem;
+  color: #727272;
+  text-align: center;
 }
 .form__text-area:focus {
-    outline-color: #D92929;
+  outline-color: #d92929;
 }
 .form__button-container {
-    display: flex;
-    flex-flow: row wrap;
-    column-gap: 2rem;
-    justify-content: space-evenly;
-    align-items: center;
+  display: flex;
+  flex-flow: row wrap;
+  column-gap: 2rem;
+  justify-content: space-evenly;
+  align-items: center;
 }
 .form__button {
-    width: 12rem;
-    height: 4.8rem;
-    border: none;
-    border-radius: .2rem;
-    cursor: pointer;
-    font-family: 'Roboto', sans-serif;
-    font-weight: lighter;
-    font-size: 1.8rem;
-    color: #D9D7D7;
-    transition: 300ms;
-    background-color: #292929;
+  width: 12rem;
+  height: 4.8rem;
+  border: none;
+  border-radius: 0.2rem;
+  cursor: pointer;
+  font-family: "Roboto", sans-serif;
+  font-weight: lighter;
+  font-size: 1.8rem;
+  color: #d9d7d7;
+  transition: 300ms;
+  background-color: #292929;
 }
 .form__button--close {
-    background-color: transparent;
-
+  background-color: transparent;
 }
 .form__button--close:active,
 .form__button--close:hover {
-    color: #D92929;
+  color: #d92929;
 }
 .form__button--add:active,
 .form__button--add:hover {
-    color: rgb(255, 247, 0);
+  color: rgb(255, 247, 0);
 }
