baje el form y el edit

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -215,7 +215,7 @@ input {
   bottom: -1rem;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: end;
   font-size: 1.8rem;
   font-weight: lighter;
 }
