--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -214,8 +214,8 @@ input {
   right: -1rem;
   bottom: -1rem;
   display: flex;
-  justify-content: center;
   align-items: end;
+  justify-content: center;
   font-size: 1.8rem;
   font-weight: lighter;
 }
@@ -227,7 +227,7 @@ input {
   justify-content: space-evenly;
   align-items: center;
   width: 80%;
-  min-height: 80%;
+  height: 60%;
   min-width: 30rem;
   max-width: 70rem;
   background-color: #181818;
