--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -214,7 +214,8 @@ input {
   right: -1rem;
   bottom: -1rem;
   display: flex;
-  align-items: end;
+  flex-flow: column wrap;
+  align-items: center;
   justify-content: center;
   font-size: 1.8rem;
   font-weight: lighter;
